# MPAS-Release

./: CMakeLists.txt  Makefile  NotesOnNamelistFiles  mpas-a_cells.ncl  mpas-a_contours.ncl  mpas-a_mesh.ncl  mpas-a_xsec.ncl  namelist.input  namelist.input.atmosphere.dcmip  namelist.input.init_Ideal  namelist.input.init_Real_s1  namelist.input.init_atmosphere.dcmip  namelist.input.init_dcmip  namelist.input.run_Ideal  namelist.input.run_Real  namelist.input.run_dcmip  namelist.input_initExample  namelist.input_initReal_s1  namelist.input_initReal_s3  namelist.input_runExample  namelist.input_runSIExample  namelist.input_runSIIdeal2  namelist.input_runSIReal  namelist.input_runSRK3Ideal2  namelist.input_runSRK3Real
cmake/: FindNetCDF.cmake  FindPIO.cmake  FindPNETCDF.cmake
src/: CMakeLists.txt  Makefile  main.F
src/core_atmosphere/: CMakeLists.txt  Makefile  Registry.xml  Registry_temp.xml  atm_core.F  held_suarez.F  mpas_atm_core.F  mpas_atm_core_interface.F  mpas_atm_mpas_core.F  mpas_atm_soundings.F  ref_pres.F
src/core_atmosphere/diagnostics/: CMakeLists.txt
src/core_atmosphere/dynamics/: mpas_atm_time_integration.F  mpas_atm_time_integration_junk
src/core_atmosphere/physics/: CMakeLists.txt  checkout_data_files.sh  mpas_atmphys_driver_convection.F  mpas_atmphys_driver_lsm.F  mpas_atmphys_driver_microphysics.F  mpas_atmphys_driver_pbl.F  mpas_atmphys_driver_sfclayer.F  mpas_atmphys_init.F  mpas_atmphys_landuse.F  mpas_atmphys_lsm_noahinit.F  mpas_atmphys_todynamics.F
src/core_atmosphere/physics/physics_wrf/: CMakeLists.txt  Makefile  libmassv.F  module_cu_gf.mpas.F  module_mp_radar.F  module_mp_thompson.F  module_ra_cam_support.F
src/core_dummy/: Makefile  Registry.xml  build_options.mk  mpas_dummy_core.F  mpas_dummy_core_interface.F
src/core_init_atmosphere/: CMakeLists.txt  Registry.xml  mpas_init_atm_cases.F  mpas_init_atm_core_interface.F  mpas_init_atm_gwd.F  mpas_init_atm_mpas_core.F  mpas_init_atm_static.F  mpas_init_atm_surface.F
src/core_landice/: mpas_li_mpas_core.F
src/core_ocean/: mpas_ocn_mpas_core.F
src/core_sw/: mpas_sw_mpas_core.F
src/core_test/: mpas_test_core.F  mpas_test_core_timekeeping_tests.F
src/driver/: mpas.F  mpas_subdriver.F
src/framework/: CMakeLists.txt  Makefile  affinity.c  mpas_block_creator.F  mpas_bootstrapping.F  mpas_constants.F  mpas_derived_types.F  mpas_dmpar.F  mpas_field_routines.F  mpas_framework.F  mpas_grid_types.F  mpas_io.F  mpas_io_input.F  mpas_io_output.F  mpas_io_streams.F  mpas_io_types.inc  mpas_stream_manager.F  mpas_timekeeping.F  xml_parser.c
src/registry/: gen_inc.c
src/tools/registry/: CMakeLists.txt  gen_inc.c
